Fix width on mobile

--- a/ui/src/app/components/feature-details/feature-details.component.scss
+++ b/ui/src/app/components/feature-details/feature-details.component.scss
@@ -6,6 +6,12 @@
     cdk-virtual-scroll-viewport {
       height: 100%;
       width: 100%;
+
+      ::ng-deep {
+        .cdk-virtual-scroll-content-wrapper {
+          width: 100%;
+        }
+      }
     }
 }
 
